# PureFile

./: .gitignore  pyproject.toml  run.py
app/: config.py  main.py  middlewares.py
app/routes/: metadata_routes.py
app/services/: logger_config.py  metadata.py  metadata_delete.py  metadata_read.py  temp_manager.py
