[project]
name = "PureFile"
version = "0.1.0"
description = "API designed for removing and reading metadata for png, jpg, docx, pdf"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docx>=0.2.4",
    "fastapi>=0.131.0",
    "loguru>=0.7.3",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pymupdf>=1.27.1",
    "pypdf>=6.7.2",
    "uvicorn>=0.41.0",
]
